Fixed z-index problem on menu.html & introduced contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,11 +288,88 @@ body > nav {
 /*---------------------------- Arrow animation */
 
 /* --------------------------- Menu */
-
-/* Need to fix menu overlay on scroll */
-body > section {
+#menu-section {
+	margin-top: 12.15rem;
 }
+/* Overide Tachyon z-index class to position images behind nav on scroll */
+.aspect-ratio--object {
+	z-index: -1;
+}
+
 /* --------------------------- Menu */
+
+/* --------------------------- Contact Form */
+
+/* .container {
+	max-width: 1280px;
+	padding: 0 1.5rem;
+	margin: 12rem auto auto;
+	overflow: hidden;
+} */
+/* .text-center {
+	text-align: center;
+} */
+/* 
+.py-3 {
+	padding: 3rem 0;
+} */
+#contact-section {
+	margin-top: 12rem;
+}
+/* .lead {
+	font-size: 1.3rem;
+	margin-bottom: 2rem;
+}
+
+.section-title {
+	font-size: 2rem;
+	display: block;
+	padding-bottom: 0.5rem;
+	text-align: center;
+	font-weight: 100;
+	text-transform: uppercase;
+} */
+
+.bottom-line {
+	height: 2px;
+	width: 3rem;
+	background: #ff428e;
+	display: block;
+	margin: 0 auto 1rem auto;
+}
+
+/* #contact-a .text-fields {
+	display: grid;
+	grid-template-areas: "name email" "subject phone" "message message";
+	grid-gap: 1.2rem;
+	margin-bottom: 1.2rem;
+}
+#contact-a .text-fields .name-input {
+	grid-area: name;
+}
+#contact-a .text-fields .subject-input {
+	grid-area: subject;
+}
+#contact-a .text-fields .email-input {
+	grid-area: email;
+}
+#contact-a .text-fields .phone-input {
+	grid-area: phone;
+}
+#contact-a .text-fields .message-input {
+	grid-area: message;
+}
+#contact-a .text-fields .text-input {
+	padding: 0.5rem 1rem;
+}
+#contact-a .text-fields .message-input {
+	height: 100px;
+}
+
+#contact-a button[type="submit"] {
+	width: 50%;
+} */
+/* --------------------------- Contact Form */
 
 /*---------------------------- Footer */
 footer {
